testsuite/tests/backpack/should_fail/bkpfail10.stderr
[1 of 3] Processing p
  [1 of 1] Compiling H[sig]          (.hsig -> nothing)
[2 of 3] Processing q
  Instantiating q
  [1 of 1] Compiling H               (.hs -> .o)
[3 of 3] Processing r
  Instantiating r
  [1 of 2] Including p[H=q:H]
    Instantiating p[H=q:H]
    [1 of 1] Compiling H[sig]          (.hsig -> .o)

bkpfail10.bkp:8:9: error:
    Type constructor ‘q:H.H’ has conflicting definitions in the module
    and its hsig file
    Main module: data q:H.H a = q:H.H a
    Hsig file:  skolem q:H.H
    The types have different kinds

bkpfail10.bkp:10:9: error:
    Identifier ‘q:H.f’ has conflicting definitions in the module
    and its hsig file
    Main module: q:H.f :: q:H.H a -> q:H.H a
    Hsig file:  q:H.f :: q:H.H -> q:H.H
    The two types are different
